# Laprod-Angular

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  README.md  angular.json  app.py  config.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  extensions.py  helpers.py  init_database.py  models.py  package-lock.json  package.json  proxy.conf.json  pyproject.toml  stripe_connect_helpers.py  tsconfig.app.json  tsconfig.json
migrations/versions/: 09c82763aeca_add_color_field_to_category_model.py  15a90336eb69_ajout_des_favoris_et_historique_d_écoute.py  1630b4bc818c_new_revision_columns.py  306436f07678_add_mixmaster_revision_colums.py  32aa101646b3_ajout_de_la_colonne_is_published.py  49f32fc8fee5_add_detailed_artist_briefing_fields_to_.py  (+15 more)
nginx/: nginx.conf
routes/: __init__.py  admin.py  admin_api.py  api.py  audio.py  auth.py  auth_api.py  boughts_api.py  contracts.py  contracts_api.py  cud_admin_api.py  cud_mixmaster_artist_api.py  cud_mixmaster_engineer_api.py  cud_tracks_api.py  cud_wallet_api.py  dashboard_api.py  favorites.py  favorites_api.py  main.py  main_api.py  mixmaster.py  mixmaster_api.py  payment.py  payment_mixmaster_api.py  payment_track_api.py  premium.py  purchases_api.py  streaming_service.py  stripe_connect.py  stripe_connect_api.py  tags_filters_api.py  topline_api.py  topline_cud_api.py  toplines.py  tracks.py  tracks_api.py  wallet.py  wallet_api.py
src/: index.html  styles.scss
utils/: archive_utils.py  audio_processing.py  contract_generator.py  csrf_validator.py  email_service.py  error_handler.py  file_validator.py  logger_config.py  notification_service.py  ownership_authorizer.py  path_validator.py  payment_validator.py  stripe_logger.py  stripe_validator.py  wallet_jobs.py  wallet_service.py
(+150 files in other folders)
